--- a/app/src/main/res/layout/custom_bottom_nav.xml
+++ b/app/src/main/res/layout/custom_bottom_nav.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bg_bottom_nav"
     android:elevation="10dp"
-    android:padding="15dp">
+    android:padding="7dp">
 
     <!-- News Item -->
     <LinearLayout
@@ -25,8 +25,8 @@
 
         <ImageView
             android:id="@+id/newsImage"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:src="@drawable/ic_announcements"
             app:tint="@color/md_theme_inverseSurface"
             tools:contentDescription="null" />
@@ -36,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
+            android:textSize="11dp"
             android:fontFamily="@font/jakarta_semibold"
             android:maxLines="1"
             android:text="@string/news"
@@ -57,8 +58,8 @@
 
         <ImageView
             android:id="@+id/suggestionImage"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:src="@drawable/ic_suggestion"
             app:tint="@color/md_theme_inverseSurface"
             tools:contentDescription="null" />
@@ -90,8 +91,8 @@
 
         <ImageView
             android:id="@+id/calendarImage"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:src="@drawable/ic_calendar"
             app:tint="@color/md_theme_inverseSurface"
             tools:contentDescription="null" />
@@ -123,8 +124,8 @@
 
         <ImageView
             android:id="@+id/profileImage"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:src="@drawable/ic_profile"
             app:tint="@color/md_theme_inverseSurface"
             tools:contentDescription="null" />
