--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -247,30 +247,6 @@
                         android:layout_marginEnd="6dp"
                         android:padding="8dp">
                         <LinearLayout
-                            android:id="@+id/item_master_toggle_notifications"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:paddingVertical="12dp">
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/jakarta_regular"
-                                android:text="@string/enable_disable_notifications"
-                                android:textSize="16sp"
-                                android:textColor="?attr/colorOnSurface" />
-                            <androidx.appcompat.widget.SwitchCompat
-                                android:id="@+id/switch_master_notifications"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:checked="true" />
-                        </LinearLayout>
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="0.5dp"
-                            android:background="@drawable/gradient_separator"  />
-                        <LinearLayout
                             android:id="@+id/item_new_announcements"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -314,7 +290,8 @@
                                 android:id="@+id/switch_event_reminders"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:checked="true" />
+                                android:checked="true"
+                                android:enabled="false"/>
                         </LinearLayout>
                         <View
                             android:layout_width="match_parent"
@@ -339,7 +316,8 @@
                                 android:id="@+id/switch_new_event_postings"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:checked="true" />
+                                android:checked="true"
+                                android:enabled="false"/>
                         </LinearLayout>
                         <View
                             android:layout_width="match_parent"
@@ -364,63 +342,11 @@
                                 android:id="@+id/switch_suggestion_updates"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:checked="true" />
+                                android:checked="true"
+                                android:enabled="false"/>
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
-
-                <TextView
-                    android:id="@+id/header_privacy_settings"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/privacy_settings"
-                    android:textStyle="bold"
-                    android:textSize="14sp"
-                    android:fontFamily="@font/jakarta_bold"
-                    android:textColor="?attr/colorOnSurfaceVariant"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginBottom="8dp" />
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card_privacy_settings"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    app:cardCornerRadius="30dp"
-                    app:cardBackgroundColor="@color/md_theme_surfaceContainerLow"
-                    app:cardElevation="0dp">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_marginStart="6dp"
-                        android:layout_marginEnd="6dp"
-                        android:padding="8dp">
-                        <LinearLayout
-                            android:id="@+id/item_anonymous_submissions"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:paddingVertical="4dp">
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/jakarta_regular"
-                                android:text="@string/anonymous_submissions"
-                                android:textSize="16sp"
-                                android:textColor="?attr/colorOnSurface" />
-                            <androidx.appcompat.widget.SwitchCompat
-                                android:id="@+id/switch_anonymous_submissions"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:checked="true" />
-                        </LinearLayout>
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
 
                 <TextView
                     android:id="@+id/header_about_legal"
