--- a/app/src/main/res/layout/custom_bottom_nav.xml
+++ b/app/src/main/res/layout/custom_bottom_nav.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bg_bottom_nav"
     android:elevation="10dp"
-    android:padding="7dp">
+    android:padding="15dp"
+    android:layout_marginBottom="12dp">
 
     <!-- News Item -->
     <LinearLayout
@@ -36,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
-            android:textSize="11dp"
+            android:textSize="11sp"
             android:fontFamily="@font/jakarta_semibold"
             android:maxLines="1"
             android:text="@string/news"
@@ -71,6 +72,7 @@
             android:layout_marginStart="6dp"
             android:fontFamily="@font/jakarta_semibold"
             android:maxLines="1"
+            android:textSize="11sp"
             android:text="@string/inputs"
             android:textColor="@color/md_theme_inverseSurface"
             android:visibility="gone" />
@@ -103,6 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:fontFamily="@font/jakarta_semibold"
+            android:textSize="11sp"
             android:maxLines="1"
             android:text="@string/events"
             android:textColor="@color/md_theme_inverseSurface"
@@ -136,6 +139,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:fontFamily="@font/jakarta_semibold"
+            android:textSize="11sp"
             android:maxLines="1"
             android:text="@string/profile"
             android:textColor="@color/md_theme_inverseSurface"
