--- a/app/src/main/res/layout/dialog_event_details.xml
+++ b/app/src/main/res/layout/dialog_event_details.xml
@@ -27,7 +27,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/event"
+            android:text="@string/eventdetail"
             android:textSize="16sp"
             android:textStyle="bold"
             android:fontFamily="@font/jakarta_regular"
