--- a/app/src/main/res/layout/dialog_new_event.xml
+++ b/app/src/main/res/layout/dialog_new_event.xml
@@ -90,6 +90,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/reminder"
+                    android:visibility="gone"
                     android:fontFamily="@font/jakarta_regular"
                     style="@style/Widget.MaterialComponents.Chip.Choice" />
 
