--- a/app/src/main/res/layout/dialog_event_details.xml
+++ b/app/src/main/res/layout/dialog_event_details.xml
@@ -107,6 +107,7 @@
         android:gravity="center_vertical">
 
         <TextView
+            android:id="@+id/set_reminder_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/set_reminder"
@@ -123,7 +124,6 @@
             android:checked="false" />
 
     </LinearLayout>
-
     <!-- Close Button -->
     <Button
         android:id="@+id/btn_close"
