--- a/app/src/main/res/layout/dialog_new_event.xml
+++ b/app/src/main/res/layout/dialog_new_event.xml
@@ -85,6 +85,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip_reminder"
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/reminder"
